test/C/src/enclave/failing/EnclaveBank.lf
// This tests checks that the validator prohibiting Banks of enclaves work.
// Supporting banks of enclaves in the C target would require cumbersome 
// AST transformation and is postponed till we really need it
target C {
    timeout: 1 sec
};

import EnclaveSink, EnclaveSource from "../lib/SimpleEnclave.lf"


main reactor {
    @enclave
    src = new[5] EnclaveSource()
    
    @enclave
    sink = new[5] EnclaveSink()

    src.out -> sink.in
}
